# my-craw

./: .gitignore  README.md  alembic.ini  hello.py  pyproject.toml
app/: database.py  main.py  models.py
app/api/: todo.py
app/core/: database.py
app/models/: __init__.py  todo.py
app/schemas/: todo.py
migrations/: env.py
migrations/versions/: bbe087e02d36_init_todos_table.py
